[project]
name = "hama-provider"
version = "0.1.0"
description = "Remote Plex metadata provider inspired by HAMA.bundle"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
hama-provider = "hama_provider.__main__:main"
hama-provider-register = "hama_provider.register:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
